; ModuleID = '/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_mime_string_call.c'
source_filename = "/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_mime_string_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASCII_CCSID = common dso_local global i32 0, align 4
@CURLE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i32 (i32*, i8*)*)* @mime_string_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mime_string_call(i32* %0, i8* %1, i32 %2, i32 (i32*, i8*)* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32 (i32*, i8*)*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 (i32*, i8*)* %3, i32 (i32*, i8*)** %9, align 8
  store i8* null, i8** %10, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %19, label %14

14:                                               ; preds = %4
  %15 = load i32 (i32*, i8*)*, i32 (i32*, i8*)** %9, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 %15(i32* %16, i8* %17)
  store i32 %18, i32* %5, align 4
  br label %36

19:                                               ; preds = %4
  %20 = load i32, i32* @ASCII_CCSID, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = load i32, i32* %8, align 4
  %23 = call i8* @dynconvert(i32 %20, i8* %21, i32 -1, i32 %22)
  store i8* %23, i8** %10, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %28, label %26

26:                                               ; preds = %19
  %27 = load i32, i32* @CURLE_OUT_OF_MEMORY, align 4
  store i32 %27, i32* %5, align 4
  br label %36

28:                                               ; preds = %19
  %29 = load i32 (i32*, i8*)*, i32 (i32*, i8*)** %9, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = load i8*, i8** %10, align 8
  %32 = call i32 %29(i32* %30, i8* %31)
  store i32 %32, i32* %11, align 4
  %33 = load i8*, i8** %10, align 8
  %34 = call i32 @free(i8* %33)
  %35 = load i32, i32* %11, align 4
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %28, %26, %14
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i8* @dynconvert(i32, i8*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
